--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 html,
 body {
   max-width: 100vw;
-  font-size: 20px;
+  font-size: 24px;
   font-family: sans-serif;
 }
 
@@ -21,7 +21,7 @@ input {
 .App {
   width: 100%;
   min-height: 100vh;
-  background-color: #1c2c4c;
+  background-color: #0d1421;
   color: #4c768d;
   padding-top: 60px;
 }
