--- a/src/components/NavBar/index.css
+++ b/src/components/NavBar/index.css
@@ -4,22 +4,14 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #4c768d;
-  color: #242443;
+  background-color: #279f57;
+  color: #0d1421;
   height: 60px;
   position: fixed;
   left: 0;
   top: 0;
   width: 100%;
   z-index: 1;
-}
-.sign-in {
-  border: none;
-  background-color: transparent;
-}
-.sign-in > img {
-  height: 30px;
-  width: auto;
 }
 .sign-out {
   padding: 5px 10px;
