messages component restyling

--- a/src/components/Message/index.css
+++ b/src/components/Message/index.css
@@ -1,42 +1,47 @@
-/* chat component */
+/* Chat wrapper */
 .messages-wrapper {
   padding: 30px;
   margin-bottom: 60px;
 }
+
+/* Chat bubble */
 .chat-bubble {
   border-radius: 20px 20px 20px 0;
   padding: 15px;
-  background-color: #7cc5d9;
-  color: #1c2c4c;
+  background-color: #204d31;
+  color: #279f57;
+  min-width: 250px;
   width: max-content;
   max-width: calc(100% - 50px);
-  box-shadow: -2px 2px 1px 1px #4c768d;
+  border: 1px solid #2fc069;
   display: flex;
   align-items: flex-start;
   margin-bottom: 20px;
+  font-size: 0.8rem;
+  box-sizing: border-box;
 }
+
 .chat-bubble.right {
   margin-left: auto;
   border-radius: 20px 20px 0 20px;
-  background-color: #fff;
-  box-shadow: -2px 2px 1px 1px #88dded;
+  background-color: #0d1421;
+  border: 1px solid #2fc069;
 }
+
 .chat-bubble__left {
   width: 35px;
   height: 35px;
   border-radius: 50%;
   margin-right: 10px;
+  border: 2px solid #2fc069;
 }
+
 .user-name {
   font-weight: bold;
   margin-bottom: 5px;
-  font-size: 0.9rem;
-  color: #1c2c4c;
+  font-size: 0.8rem;
 }
+
 .user-message {
-  word-break: break-all;
-}
-.message-time {
-  display: block;
-  text-align: right;
+  word-break: break-word;
 }
