--- a/src/App.css
+++ b/src/App.css
@@ -10,18 +10,19 @@ html,
 body {
   max-width: 100vw;
   font-size: 24px;
-  font-family: sans-serif;
+  font-family: "Orbitron", serif;
 }
 
 button,
 input {
   cursor: pointer;
+  font-family: "Orbitron", serif;
 }
 
 .App {
   width: 100%;
   min-height: 100vh;
-  background-color: #0d1421;
+  background-color: #00060e;
   color: #4c768d;
   padding-top: 60px;
 }
