--- a/src/components/NavBar/index.css
+++ b/src/components/NavBar/index.css
@@ -4,8 +4,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #279f57;
-  color: #0d1421;
+  background-color: #fdf800;
+  color: #00060e;
   height: 60px;
   position: fixed;
   left: 0;
@@ -37,8 +37,8 @@
   position: absolute;
   top: 60px;
   right: 20px;
-  background-color: #204d31;
-  border: 1px solid #2fc069;
+  background-color: #fdf800;
+  border: 1px solid #00060e;
   border-radius: 5px;
   padding: 10px;
   width: 220px;
@@ -54,7 +54,7 @@
   padding: 10px;
   margin: 2px 0;
   border-radius: 5px;
-  color: #0d1421;
+  color: #00060e;
   border: 1px transparent;
   background-color: transparent;
   font-weight: 600;
@@ -68,16 +68,16 @@
   padding: 10px;
   margin: 2px 0;
   border-radius: 5px;
-  color: #2fc069;
-  border: 1px solid #2fc069;
-  background-color: #0d1421;
+  color: #39c4b6;
+  border: 1px solid #00060e;
+  background-color: #00060e;
   font-weight: 600;
 }
 
 .menu-button:hover {
-  color: #d0d0d0;
-  background-color: #204d31;
-  border: 1px solid #2fc069;
+  color: #00060e;
+  background-color: #39c4b6;
+  border: 1px solid #54c1e6;
 }
 
 /* Sign-in button styling */
