--- a/src/components/SendMessage/index.css
+++ b/src/components/SendMessage/index.css
@@ -4,7 +4,7 @@
   bottom: 0;
   width: 100%;
   padding: 10px 15px;
-  background-color: #204d31;
+  background-color: #39c4b6;
   display: flex;
   align-items: center;
   gap: 10px;
@@ -28,7 +28,7 @@
 
 .send-message > input:focus {
   outline: none;
-  border: 1px solid #2fc069;
+  border: 1px solid #fdf800;
 }
 
 /* Send button styles */
@@ -43,9 +43,9 @@
 }
 
 .send-button-circle {
-  width: 45px;
-  height: 45px;
-  background-color: #279f57;
+  width: 40px;
+  height: 40px;
+  background-color: #fdf800;
   border-radius: 50%;
   display: flex;
   justify-content: center;
