--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,12 @@ body {
   max-width: 100vw;
   font-size: 24px;
   font-family: "Orbitron", serif;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.body::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
 }
 
 button,
